# gareth

./: Cargo.toml  justfile
src/: core.rs  main.rs
src/core/: interface.rs  utilities.rs
src/core/interface/: console.rs
tests/: utilities.rs
