[package]
name = "gareth"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive", "env"] }
clap_complete = "4.5.65"
reqwest = { version = "0.13.2", features = ["json"] }
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
termimad = "0.34.1"
tokio = { version = "1.49.0", features = ["full"] }
